# Ingrident-Toxicity-Metric-Fetcher-

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  pyrightconfig.json
scripts/: build_database.py
src/: __init__.py  config.py
src/ocr/: __init__.py  extractor.py  preprocessor.py
src/parser/: __init__.py  ingredient_parser.py
src/report/: __init__.py  generator.py
src/toxicity/: __init__.py  database.py  models.py  scorer.py
tests/: test_database.py  test_e2e.py  test_ocr.py  test_parser.py  test_report.py  test_scorer.py
