[project]
name = "ingridient-health-metric-fetcher"
version = "0.1.0"
description = "Analyze food product labels to detect ingredients and score their toxicity for human consumption using OCR, LLM reasoning, and a curated toxicological knowledge base."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "paddleocr>=2.9",
    "paddlepaddle>=3.0",
    "opencv-python>=4.10",
    "Pillow>=11.0",
    "google-genai>=1.0",
    "pydantic>=2.10",
    "streamlit>=1.41",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "fpdf2>=2.8",
    "python-dotenv>=1.0",
    "thefuzz[speedup]>=0.22",
    "httpx>=0.28",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
toxicity-analyzer = "main:main"
